<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cobos"
                android:textColor="#FFFFFF"
                android:gravity="center"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                app:srcCompat="@drawable/dietalogo" />

            <Button
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0EBF55"
                android:text="@string/btn1"
                android:textColor="#FFFFFF"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="irDieta1"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E4941E"
                android:text="@string/btn2"
                android:textColor="#FFFFFF"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="irDieta2"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#2196F3"
                android:text="@string/btn3"
                android:textColor="#FFFFFF"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="irDieta3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#9C27B0"
                android:text="@string/btn4"
                android:textColor="#FFFFFF"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="irDieta4"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#009688"
                android:text="@string/btn5"
                android:textColor="#FFFFFF"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="irDieta5"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E91E63"
                android:text="@string/btn6"
                android:textColor="#FFFFFF"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="irDieta6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btn7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#3F51B5"
                android:text="@string/btn7"
                android:textColor="#FFFFFF"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="irDieta7"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/comentario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/sigue"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>