<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dieta1"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="300dp"
                android:layout_marginRight="100dp"
                app:srcCompat="@drawable/dietalogo2" />

            <TextView
                android:id="@+id/titulo1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn1"
                android:textColor="#FFC107"
                android:background="#B9000000"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/titulo2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desayuno"
                android:background="#B9000000"
                android:textColor="#AAF454"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/titulo3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deportistas"
                android:textColor="#FFFFFE"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9000000"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/lst1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/titulo4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hombres"
                android:textColor="#FFFFFE"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9000000"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/lst2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/titulo5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mujeres"
                android:textColor="#FFFFFE"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9000000"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/lst3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/titulo6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mediamanana"
                android:background="#B9000000"
                android:textColor="#AAF454"
                android:layout_marginTop="10dp"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/lst4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/titulo7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/comida"
                android:background="#B9000000"
                android:textColor="#AAF454"
                android:layout_marginTop="10dp"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/lst5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/titulo8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/merienda"
                android:background="#B9000000"
                android:textColor="#AAF454"
                android:layout_marginTop="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/titulo9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deportistas"
                android:textColor="#FFFFFE"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9000000"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/lst6"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/titulo10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hombres"
                android:textColor="#FFFFFE"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9000000"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/lst7"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/titulo11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mujeres"
                android:textColor="#FFFFFE"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#B9000000"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/lst8"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/titulo12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cena"
                android:textColor="#AAF454"
                android:background="#B9000000"
                android:layout_marginTop="10dp"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/lst9"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="#FFFFFF"
                android:layout_marginBottom="10dp"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnRegresar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F40707"
                android:text="Regresar"
                android:textColor="#FFFFFF"
                android:paddingTop="20dp"
                android:paddingBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="Regresar"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>